
  [ Jurij Smakov, Simon Horman ]
  * Ensure that only one kernel-manual/linux-manual package can
    be installed at a time to avoid file conflicts. (closes: #320042)

  [ Bastian Blank ]
  * Move audit and preempt settings to core config file.
  * Fix powerpc configuration.
  * Add debian version information to kernel version string.

  [ Christian T. Steigies ]
  * update m68k.diff for linux-2.6.13
  * add m68k-42_dma.patch and m68k-sonic.patch that will be in upstream 2.6.14
    (which makes sun3 build fail, needs fixing)

 -- Bastian Blank <waldi@debian.org>  Wed, 14 Sep 2005 10:02:21 +0000

linux-2.6 (2.6.12-6) unstable; urgency=high

  [ Andres Salomon, Bastian Blank ]
  * Change ATM and Classical-IP-over-ATM to be modular, instead of being
    statically included. (closes: #323143)

  [ Sven Luther ]
  * [powerpc] powerpc-pmac-sound-check.patch: Added pmac-sound sanity check.
  * [powerpc] powerpc-apus.patch:
    Added preliminary apus patch to package, not applied to kernel tree yet.

  [ Simon Horman ]
  * Unset CC_OPTIMIZE_FOR_SIZE in i386 config,
    it breaks iproute's (and other netlink users) ability
    to set routes. (closes: #322723)
  * Added 2.6.12.6
    - [SECURITY: CAN-2005-2555] Restrict socket policy loading to
      CAP_NET_ADMIN.
    - [SECURITY] Fix DST leak in icmp_push_reply().  Possible remote
      DoS?
    - [SECURITY] NPTL signal delivery deadlock fix; possible local
      DoS.
    - fix gl_skb/skb type error in genelink driver in usbnet
    - [SECURITY] fix a memory leak in devices seq_file implementation;
      local DoS.
    - [SECURITY] Fix SKB leak in ip6_input_finish(); local DoS.

  [ Andres Salomon ]
  * [hppa] enable discontiguous memory support for 32bit hppa images, so
    they build.

 -- Andres Salomon <dilinger@debian.org>  Tue, 06 Sep 2005 10:14:35 -0400

linux-2.6 (2.6.12-5) unstable; urgency=low

  * Change ARM to use GCC 3.3 to avoid FTBFS errors with GCC 4
   (dann frazier)
