@@ -1,7 +1,7 @@
 Package: linux-headers-@subarch@@version@-@abiname@-@flavour@
 Section: devel
 Priority: optional
-Depends: coreutils | fileutils (>= 4.0), linux-headers-@subarch@@version@-@abiname@ (= ${Source-Version})
+Depends: linux-headers-@subarch@@version@-@abiname@ (= ${Source-Version})
 Provides: linux-headers, linux-headers-@major@
 Description: Header files for Linux kernel @version@ on @class@ machines
  This package provides the architecture-specific kernel header files
