@@ -1,7 +1,6 @@
 Package: linux-headers-@subarch@@version@-@abiname@
 Section: devel
 Priority: optional
-Depends: coreutils | fileutils (>= 4.0)
 Provides: linux-headers, linux-headers-@major@
 Description: Common header files for Linux kernel @version@
  This package provides the (sub)architecture-specific common kernel header files
