@@ -2,7 +2,7 @@ Package: linux-image-@subarch@@version@-@abiname@-@flavour@
 Section: base
 Priority: optional
 Provides: linux-image, linux-image-@major@
-Depends: initrd-tools (>= 0.1.78), coreutils | fileutils (>= 4.0), module-init-tools (>= 0.9.13)
+Depends: initrd-tools (>= 0.1.78), module-init-tools (>= 0.9.13)
 Conflicts: hotplug (<< 0.0.20040105-1)
 Suggests: linux-doc-@version@ | linux-source-@version@
 Description: Linux kernel @version@ image on @class@ machines
