@@ -3,7 +3,7 @@ Architecture: all
 Section: devel
 Priority: optional
 Provides: linux-source, linux-source-@major@
-Depends: binutils, bzip2, coreutils | fileutils (>= 4.0)
+Depends: binutils, bzip2
 Recommends: libc6-dev | libc-dev, gcc, make
 Suggests: libncurses-dev | ncurses-dev, kernel-package, libqt3-mt-dev
 Description: Linux kernel source for version @version@ with Debian patches
@@ -19,7 +19,6 @@ Architecture: all
 Section: doc
 Priority: optional
 Provides: linux-doc-@major@
-Depends: coreutils | fileutils (>= 4.0)
 Description: Linux kernel specific documentation for version @version@
  This package provides the various README files and HTML documentation for
  the Linux kernel version @version@. Plenty of information, including the
