@@ -29,6 +29,7 @@ linux-2.6 (2.6.13-1) UNRELEASED; urgency=low
   * Move audit and preempt settings to core config file.
   * Fix powerpc configuration.
   * Add debian version information to kernel version string.
+  * Drop coreutils | fileutils dependencies.
 
   [ Christian T. Steigies ]
   * update m68k.diff for linux-2.6.13
